--- a/ace-web/src/styles/header.module.scss
+++ b/ace-web/src/styles/header.module.scss
@@ -1,8 +1,10 @@
 @import "colors.scss";
 @import "fonts.scss";
 
+$header-height: 100px;
+
 .container {
-    height: 100px;
+    height: $header-height;
     display: flex;
     flex-direction: column;
     justify-content: center;
