--- a/ace-web/src/styles/index.module.scss
+++ b/ace-web/src/styles/index.module.scss
@@ -5,7 +5,7 @@
 }
 
 .logoContainer {
-    height: max(1000px, calc(100vh - $header-height));
+    height: calc(max(800px, 100vh) - $header-height);
     display: flex;
     flex-direction: column;
     align-items: center;
