--- a/ace-web/src/styles/header.module.scss
+++ b/ace-web/src/styles/header.module.scss
@@ -8,6 +8,7 @@ $header-height: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border-bottom: 2px solid black;
 }
 
 .innerContainer {
