--- a/ace-web/src/styles/join.module.scss
+++ b/ace-web/src/styles/join.module.scss
@@ -7,11 +7,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    max-width: 80ch;
+    margin: 0 auto;
+    padding: 0 30px;
 }
 
 .submitContainer {
-    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
 
     p {
         margin: 10px 0;
@@ -37,7 +40,7 @@
     background-color: $white;
     color: $black;
     height: 46px;
-    width: 400px;
+    width: max(80%, 400px);
 }
 
 .submitButton {
